Added topics array.  Added displayButtons function.

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 </head>
 
 <body>
-    <div id='animalButtons'>
+    <div id='searchButtons'>
 
     </div>
-    <form id='animal-form'>
-        <label for='animal-input'>Add an animal</label>
-        <input type="text" id='animal-input'>
+    <form id='search-form'>
+        <label for='search-input'>Add an animal</label>
+        <input type="text" id='search-input'>
 
-        <input type='submit' id='addAnimal'>
+        <input type='submit' id='addButton'>
     </form>
 
-    <div id='animals'>
+    <div id='gifDisplay'>
 
 
     </div>
