Moved code.js to bottom of body for better flow.  Added code to add additional buttons ot the button display.  Added inital CSS for gifDisplay.  Changed some variable names in code.js and index.html for better flow.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="assets/js/code.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Gif-tastic!</title>
 </head>
@@ -16,8 +15,8 @@
 
     </div>
     <form id='search-form'>
-        <label for='search-input'>Add an animal</label>
-        <input type="text" id='search-input'>
+        <label for='searchInput'>Add an animal</label>
+        <input type="text" id='searchInput'>
 
         <input type='submit' id='addButton'>
     </form>
@@ -26,6 +25,7 @@
 
 
     </div>
+    <script src="assets/js/code.js"></script>
 </body>
 
 </html>
