Added code to prevent a blank entry for adding buttons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     </div>
     <form id='search-form'>
-        <label for='searchInput'>Add an animal</label>
+        <label for='searchInput'>Add a topic!</label><br>
         <input type="text" id='searchInput'>
 
         <input type='submit' id='addButton'>
