Added additional info to the main page to better User Experience

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <form id='search-form'>
-        <label for='searchInput'>Add a topic!</label><br>
+        <label for='searchInput'>Add a topic!  Click the image to start and stop animation!</label><br>
         <input type="text" id='searchInput'>
 
         <input type='submit' id='addButton'>
