Dark background.  Added CSS to form.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body>
     <form id='search-form'>
-        <label for='searchInput'>Add a topic!  Click the image to start and stop animation!</label><br>
-        <input type="text" id='searchInput'>
-
-        <input type='submit' id='addButton'>
+        <label for='searchInput'>Add a search topic!</label><br>
+        <input type="text" id='searchInput'><br>
+        <input type='submit' id='addButton' value="Add!">
+        <br>Click to start/stop animation!
     </form>
     <div id='searchButtons'>
 
